# PassMan

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test.json
src/: cli.rs  config.rs  error.rs  generator.rs  main.rs  manager.rs
src/manager/: entry.rs  errors.rs  mod.rs  notes.rs
wix/: main.wxs
