[package]
name = "passman"
version = "0.6.1"
edition = "2021"
repository = "https://github.com/Clay-6/PassMan"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Password manager with support for basic operations & notes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.15", features = ["derive"] }
home = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
