[package]
name = "pass-man"
authors = ["Clayman"]
version = "0.6.5"
edition = "2021"
repository = "https://github.com/Clay-6/PassMan"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Command-line password manager with support for basic operations & notes"

[[bin]]
name = "passman"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.15", features = ["derive"] }
confy = "0.4.0"
home = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
